# verilator-cmake

./: CMakeLists.txt  readme.md
CMakeModules/: FindVerilator.cmake
src/: shift-tb.cpp  shift.v
